temp fix for word wrapping on back of card and styled section p tag for Bio
git-svn-id: https://developdaly.svn.beanstalkapp.com/create-denton/trunk@129 9eefaf49-d13b-4547-b2ae-f4dffa355a4c

--- a/content/themes/createdenton/style.css
+++ b/content/themes/createdenton/style.css
@@ -363,6 +363,14 @@ figure {
 	color: #333;
 }
 
+.reveal-modal .modal-body section p {
+	color: #333;
+	border-left: solid 2px #333;
+	padding-left: 15px;
+	margin-left: 25px;
+	max-width: 550px;
+}
+
 .reveal-modal .modal-body a:hover {
 	opacity: 0.7;
 }
